// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should render corectly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="menuContainer false"
      >
        <div
          class="menuWrapper"
        >
          <div
            class="slideMenuBtn"
          >
            <span />
            <span />
            <span />
          </div>
          <div
            class="brandTitle"
          >
            <strong>
              Horea's
            </strong>
             Photography
          </div>
          <div
            class="container false"
          >
            <div
              class="stopped"
            >
              <img
                alt="stop music icon"
                data-nimg="1"
                decoding="async"
                height="20"
                loading="lazy"
                src="/icons/music-stop.svg"
                style="color: transparent;"
                width="20"
              />
            </div>
            <audio
              autoplay=""
              id="audio"
              loop=""
              src="/media/trance1.flac"
            />
          </div>
        </div>
        <div
          class="drawer drawerClosed"
        >
          <div
            class="drawerHeader"
          >
            <button
              class="drawerCloseBtn"
            >
              <img
                alt="close icon"
                data-nimg="1"
                decoding="async"
                height="15"
                loading="lazy"
                src="/icons/close.svg"
                style="color: transparent;"
                width="15"
              />
            </button>
          </div>
          <div
            class="drawerBody"
          >
            <div
              class="drawerItem"
            >
              Galery
            </div>
            <div
              class="drawerItem"
            >
              Shop
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="menuContainer false"
    >
      <div
        class="menuWrapper"
      >
        <div
          class="slideMenuBtn"
        >
          <span />
          <span />
          <span />
        </div>
        <div
          class="brandTitle"
        >
          <strong>
            Horea's
          </strong>
           Photography
        </div>
        <div
          class="container false"
        >
          <div
            class="stopped"
          >
            <img
              alt="stop music icon"
              data-nimg="1"
              decoding="async"
              height="20"
              loading="lazy"
              src="/icons/music-stop.svg"
              style="color: transparent;"
              width="20"
            />
          </div>
          <audio
            autoplay=""
            id="audio"
            loop=""
            src="/media/trance1.flac"
          />
        </div>
      </div>
      <div
        class="drawer drawerClosed"
      >
        <div
          class="drawerHeader"
        >
          <button
            class="drawerCloseBtn"
          >
            <img
              alt="close icon"
              data-nimg="1"
              decoding="async"
              height="15"
              loading="lazy"
              src="/icons/close.svg"
              style="color: transparent;"
              width="15"
            />
          </button>
        </div>
        <div
          class="drawerBody"
        >
          <div
            class="drawerItem"
          >
            Galery
          </div>
          <div
            class="drawerItem"
          >
            Shop
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Menu should render corectly with drawer open 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="menuContainer false"
      >
        <div
          class="menuWrapper"
        >
          <div
            class="slideMenuBtn"
          >
            <span />
            <span />
            <span />
          </div>
          <div
            class="brandTitle"
          >
            <strong>
              Horea's
            </strong>
             Photography
          </div>
          <div
            class="container hideIcon"
          >
            <div
              class="stopped"
            >
              <img
                alt="stop music icon"
                data-nimg="1"
                decoding="async"
                height="20"
                loading="lazy"
                src="/icons/music-stop.svg"
                style="color: transparent;"
                width="20"
              />
            </div>
            <audio
              autoplay=""
              id="audio"
              loop=""
              src="/media/trance1.flac"
            />
          </div>
        </div>
        <div
          class="drawer drawerOpen"
        >
          <div
            class="drawerHeader"
          >
            <button
              class="drawerCloseBtn"
            >
              <img
                alt="close icon"
                data-nimg="1"
                decoding="async"
                height="15"
                loading="lazy"
                src="/icons/close.svg"
                style="color: transparent;"
                width="15"
              />
            </button>
          </div>
          <div
            class="drawerBody"
          >
            <div
              class="drawerItem"
            >
              Galery
            </div>
            <div
              class="drawerItem"
            >
              Shop
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="menuContainer false"
    >
      <div
        class="menuWrapper"
      >
        <div
          class="slideMenuBtn"
        >
          <span />
          <span />
          <span />
        </div>
        <div
          class="brandTitle"
        >
          <strong>
            Horea's
          </strong>
           Photography
        </div>
        <div
          class="container hideIcon"
        >
          <div
            class="stopped"
          >
            <img
              alt="stop music icon"
              data-nimg="1"
              decoding="async"
              height="20"
              loading="lazy"
              src="/icons/music-stop.svg"
              style="color: transparent;"
              width="20"
            />
          </div>
          <audio
            autoplay=""
            id="audio"
            loop=""
            src="/media/trance1.flac"
          />
        </div>
      </div>
      <div
        class="drawer drawerOpen"
      >
        <div
          class="drawerHeader"
        >
          <button
            class="drawerCloseBtn"
          >
            <img
              alt="close icon"
              data-nimg="1"
              decoding="async"
              height="15"
              loading="lazy"
              src="/icons/close.svg"
              style="color: transparent;"
              width="15"
            />
          </button>
        </div>
        <div
          class="drawerBody"
        >
          <div
            class="drawerItem"
          >
            Galery
          </div>
          <div
            class="drawerItem"
          >
            Shop
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
